src/css/gaming_laptop.css
*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #060C19;
    color: white;
    overflow-x: hidden;
    padding-top: 72px;
}

.breadcrumb {
    margin: 0 auto;
    max-width: 1280px; 
    font-size: 32px;
    font-weight: bold;
    padding: 50px 0px;
    display: flex;
    gap: 10px;
}

.current{
    color: rgb(255, 255, 255,55%);
}

.description {
    /* font-family: 'Rajdhani', sans-serif */
    border-top: 1px solid #525151;
    border-bottom: 1px solid #525151;
    font-size: 20px;
    color: white
}
.description p{  
    margin: 0 auto;
    padding: 20px 0;
    max-width: 1280px; 
}

h1{
    font-size: 36px;
    padding: 10px;
    text-align: center;
}
/* popular laptop list----------------------- */
.pop-laptop-list {
    margin: 50px auto;
    max-width: 1280px; 
    display: flex;
    gap: 50px;
}

.pop-laptop-card{
    height: 580px;
    width: auto;
    display: flex;
    flex-direction: column;   
}

/* image */
.pop-image-panel{
    background-color: #D9D9D9;
    border-radius: 4px;
    padding: 40px;
    height: 230px;
    display: flex;
    justify-content: center;   
}


.pop-image-panel img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;

    transition: transform 0.3s ease;

}

.pop-image-panel img:hover{
    transform: scale(1.1);
}

.pop-laptop-card h3 {
    font-size: 20px;
    font-weight: normal;
}

/* detail infor */
.pop-laptop-card .detail-info {
    overflow-y: auto;
    max-height: 150px;
    scrollbar-width: none;
    font-size: 15px;
    font-weight: normal;
    
}

.pop-detail-info ul{
    margin: 0;
}

/* bottom section*/
    /* rating */

.pop-bottom-section {
    border-top: 1px solid #525151;
    margin-top: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.pop-bottom-section p{
    color: #00F0FF;
    margin: 10px;
    font-size: 30px;
    font-weight: bold;
}

.pop-bottom-section button{
    font-size: 15px;
    font-weight: bold;
    background-color: #3b82f6; 
    color: white;
    border: none;
    padding: 10px 40px;
    border-radius: 5px;
    cursor: pointer;

    transition: transform 0.3s ease;
}

.pop-bottom-section button:hover{
    transform: scale(1.1);
}

/* laptop list --------------------------------- */

.laptop-list {
    margin: 50px auto;
    max-width: 1280px; 
    display: flex;
    gap: 30px;
}

.laptop-card{
    height: 460px;
    width: auto;
    display: flex;
    flex-direction: column;   
}

.image-panel{
    background-color: #D9D9D9;
    border-radius: 4px;
    padding: 20px;
    height: 200px;
    display: flex;
    justify-content: center;   
}

.image-panel img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    transition: transform 0.3s ease;
}

.image-panel img:hover{
    transform: scale(1.1);
}

.laptop-card h3 {
    font-size: 15px;
    font-weight: normal;
}

/* detail infor */
.laptop-card .detail-info {
    overflow-y: auto;
    max-height: 150px;
    scrollbar-width: none;
    font-size: 13px;
    font-weight: normal;
    
}

.detail-info ul{
    margin: 0;
}

.bottom-section {
    border-top: 1px solid #525151;
    margin-top: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.bottom-section p{
    color: #00F0FF;
    margin: 10px;
    font-size: 25px;
    font-weight: bold;
}

.bottom-section button{
    font-size: 15px;
    font-weight: bold;
    background-color: #3b82f6; 
    color: white;
    border: none;
    padding: 10px 40px;
    border-radius: 5px;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.bottom-section button:hover{
    transform: scale(1.1);
}

